comm/IMCUtils: Clean URL construction future deprecation.